modified:   public/index.html 	modified:   src/Components/App/App.module.scss 	modified:   src/Components/TabPart/TabPart.module.scss 	modified:   src/Components/TabPart/TabPart.tsx 	modified:   src/Components/TreePart/TreePart.tsx 	modified:   src/Components/TreePart/TreePatt.module.scss 	modified:   src/index.scss

--- a/src/Components/App/App.module.scss
+++ b/src/Components/App/App.module.scss
@@ -2,6 +2,9 @@
   width:100%;
   display:flex;
   min-height: 400px;
+  margin-top:50px;
+  align-items: start;
+  justify-content: center;
   //align-items: stretch;
   //justify-content: center;
 }
